--- a/src/app.css
+++ b/src/app.css
@@ -11,8 +11,8 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --background-color: #101115;
-        --primary-color: rgb(29 31 38);
+        --background-color: white;
+        --primary-color: whitesmoke;
         --shadow-color: none;
         --main-font-color: rgb(139 143 155);
     }
@@ -22,7 +22,7 @@ html {
     background-color: var(--background-color);
     color: var(--main-font-color);
     width: 100vw;
-    font-family: 'Rubik', 'Lato', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 0.1px;
     user-select: none;
     scroll-behavior: smooth !important;
